gnupg fails (buffer overflow detected) to encrypt archive when called from duplicity
Closed, ResolvedPublic

Assigned To
Authored By
freg
Jan 18 2015, 11:31 AM

Description

I use duplicity to back-up my system via sftp. Duplicity uses gnupg to encrypt
the backups. Suddenly, my backups started to fail because gnupg crashes because
of a buffer overflow:

Jan 18 09:11:18 Info: Duplicity cleanup finished successfully.
Jan 18 09:14:50 Info: Duplicity remove-older-than finished successfully.
Jan 18 09:19:49 Error: Local and Remote metadata are synchronized, no sync needed.
Jan 18 09:19:49 Error: Last full backup date: Fri Dec 5 21:16:49 2014
Jan 18 09:19:49 Error: Reuse configured PASSPHRASE as SIGN_PASSPHRASE
Jan 18 09:19:49 Error: GPGError: GPG Failed, see log below:
Jan 18 09:19:49 Error: ===== Begin GnuPG log =====
Jan 18 09:19:49 Error: * buffer overflow detected *: gpg terminated
Jan 18 09:19:49 Error: ======= Backtrace: =========
Jan 18 09:19:49 Error: /lib/x86_64-linux-gnu/libc.so.6(+0x7303f)[0x7fd2d73b803f]
Jan 18 09:19:49 Error:
/lib/x86_64-linux-gnu/libc.so.6(fortify_fail+0x37)[0x7fd2d743b147]
Jan 18 09:19:49 Error: /lib/x86_64-linux-gnu/libc.so.6(+0xf4360)[0x7fd2d7439360]
Jan 18 09:19:49 Error: /lib/x86_64-linux-gnu/libc.so.6(+0xf60b7)[0x7fd2d743b0b7]
Jan 18 09:19:49 Error: gpg[0x491b68]
Jan 18 09:19:49 Error: gpg[0x48b6fe]
Jan 18 09:19:49 Error: gpg[0x48bb07]
Jan 18 09:19:49 Error: gpg[0x48c5a6]
Jan 18 09:19:49 Error: gpg[0x48c6be]
Jan 18 09:19:49 Error: gpg[0x417209]
Jan 18 09:19:49 Error: gpg[0x44fa43]
Jan 18 09:19:50 Error: gpg[0x4a66fb]
Jan 18 09:19:50 Error: gpg[0x4a6c85]
Jan 18 09:19:50 Error: gpg[0x451c41]
Jan 18 09:19:50 Error: gpg[0x408bd9]
Jan 18 09:19:50 Error:
/lib/x86_64-linux-gnu/libc.so.6(
libc_start_main+0xf5)[0x7fd2d7366b45]
Jan 18 09:19:50 Error: gpg[0x40a380]
Jan 18 09:19:50 Error: ======= Memory map: ========
Jan 18 09:19:50 Error: 00400000-004f3000 r-xp 00000000 08:11 22676204 /usr/bin/gpg
Jan 18 09:19:50 Error: 006f2000-006f3000 r--p 000f2000 08:11 22676204 /usr/bin/gpg
Jan 18 09:19:50 Error: 006f3000-006f7000 rw-p 000f3000 08:11 22676204 /usr/bin/gpg
Jan 18 09:19:50 Error: 006f7000-006fa000 rw-p 00000000 00:00 0
Jan 18 09:19:50 Error: 016a3000-016c4000 rw-p 00000000 00:00 0 [heap]
Jan 18 09:19:50 Error: 7fd2d6f05000-7fd2d6f1b000 r-xp 00000000 08:11 20978018
/lib/x86_64-linux-gnu/libgcc_s.so.1
Jan 18 09:19:50 Error: 7fd2d6f1b000-7fd2d711a000 ---p 00016000 08:11 20978018
/lib/x86_64-linux-gnu/libgcc_s.so.1
Jan 18 09:19:50 Error: 7fd2d711a000-7fd2d711b000 rw-p 00015000 08:11 20978018
/lib/x86_64-linux-gnu/libgcc_s.so.1
Jan 18 09:19:50 Error: 7fd2d711b000-7fd2d7141000 r-xp 00000000 08:11 20972678
/lib/x86_64-linux-gnu/libtinfo.so.5.9
Jan 18 09:19:50 Error: 7fd2d7141000-7fd2d7340000 ---p 00026000 08:11 20972678
/lib/x86_64-linux-gnu/libtinfo.so.5.9
Jan 18 09:19:50 Error: 7fd2d7340000-7fd2d7344000 r--p 00025000 08:11 20972678
/lib/x86_64-linux-gnu/libtinfo.so.5.9
Jan 18 09:19:50 Error: 7fd2d7344000-7fd2d7345000 rw-p 00029000 08:11 20972678
/lib/x86_64-linux-gnu/libtinfo.so.5.9
Jan 18 09:19:50 Error: 7fd2d7345000-7fd2d74e4000 r-xp 00000000 08:11 20977698
/lib/x86_64-linux-gnu/libc-2.19.so
Jan 18 09:19:50 Error: 7fd2d74e4000-7fd2d76e4000 ---p 0019f000 08:11 20977698
/lib/x86_64-linux-gnu/libc-2.19.so
Jan 18 09:19:50 Error: 7fd2d76e4000-7fd2d76e8000 r--p 0019f000 08:11 20977698
/lib/x86_64-linux-gnu/libc-2.19.so
Jan 18 09:19:50 Error: 7fd2d76e8000-7fd2d76ea000 rw-p 001a3000 08:11 20977698
/lib/x86_64-linux-gnu/libc-2.19.so
Jan 18 09:19:50 Error: 7fd2d76ea000-7fd2d76ee000 rw-p 00000000 00:00 0
Jan 18 09:19:50 Error: 7fd2d76ee000-7fd2d76f5000 r-xp 00000000 08:11 20978014
/lib/x86_64-linux-gnu/libusb-0.1.so.4.4.4
Jan 18 09:19:50 Error: 7fd2d76f5000-7fd2d78f4000 ---p 00007000 08:11 20978014
/lib/x86_64-linux-gnu/libusb-0.1.so.4.4.4
Jan 18 09:19:50 Error: 7fd2d78f4000-7fd2d78f5000 r--p 00006000 08:11 20978014
/lib/x86_64-linux-gnu/libusb-0.1.so.4.4.4
Jan 18 09:19:50 Error: 7fd2d78f5000-7fd2d78f6000 rw-p 00007000 08:11 20978014
/lib/x86_64-linux-gnu/libusb-0.1.so.4.4.4
Jan 18 09:19:50 Error: 7fd2d78f6000-7fd2d78f7000 rw-p 00000000 00:00 0
Jan 18 09:19:50 Error: 7fd2d78f7000-7fd2d78fa000 r-xp 00000000 08:11 20977737
/lib/x86_64-linux-gnu/libdl-2.19.so
Jan 18 09:19:50 Error: 7fd2d78fa000-7fd2d7af9000 ---p 00003000 08:11 20977737
/lib/x86_64-linux-gnu/libdl-2.19.so
Jan 18 09:19:50 Error: 7fd2d7af9000-7fd2d7afa000 r--p 00002000 08:11 20977737
/lib/x86_64-linux-gnu/libdl-2.19.so
Jan 18 09:19:50 Error: 7fd2d7afa000-7fd2d7afb000 rw-p 00003000 08:11 20977737
/lib/x86_64-linux-gnu/libdl-2.19.so
Jan 18 09:19:50 Error: 7fd2d7afb000-7fd2d7b3b000 r-xp 00000000 08:11 20976805
/lib/x86_64-linux-gnu/libreadline.so.6.3
Jan 18 09:19:50 Error: 7fd2d7b3b000-7fd2d7d3b000 ---p 00040000 08:11 20976805
/lib/x86_64-linux-gnu/libreadline.so.6.3
Jan 18 09:19:50 Error: 7fd2d7d3b000-7fd2d7d3d000 r--p 00040000 08:11 20976805
/lib/x86_64-linux-gnu/libreadline.so.6.3
Jan 18 09:19:50 Error: 7fd2d7d3d000-7fd2d7d44000 rw-p 00042000 08:11 20976805
/lib/x86_64-linux-gnu/libreadline.so.6.3
Jan 18 09:19:50 Error: 7fd2d7d44000-7fd2d7d45000 rw-p 00000000 00:00 0
Jan 18 09:19:50 Error: 7fd2d7d45000-7fd2d7d54000 r-xp 00000000 08:11 20972676
/lib/x86_64-linux-gnu/libbz2.so.1.0.4
Jan 18 09:19:50 Error: 7fd2d7d54000-7fd2d7f53000 ---p 0000f000 08:11 20972676
/lib/x86_64-linux-gnu/libbz2.so.1.0.4
Jan 18 09:19:50 Error: 7fd2d7f53000-7fd2d7f54000 r--p 0000e000 08:11 20972676
/lib/x86_64-linux-gnu/libbz2.so.1.0.4
Jan 18 09:19:50 Error: 7fd2d7f54000-7fd2d7f55000 rw-p 0000f000 08:11 20972676
/lib/x86_64-linux-gnu/libbz2.so.1.0.4
Jan 18 09:19:50 Error: 7fd2d7f55000-7fd2d7f6f000 r-xp 00000000 08:11 20972499
/lib/x86_64-linux-gnu/libz.so.1.2.8
Jan 18 09:19:50 Error: 7fd2d7f6f000-7fd2d816e000 ---p 0001a000 08:11 20972499
/lib/x86_64-linux-gnu/libz.so.1.2.8
Jan 18 09:19:50 Error: 7fd2d816e000-7fd2d816f000 r--p 00019000 08:11 20972499
/lib/x86_64-linux-gnu/libz.so.1.2.8
Jan 18 09:19:50 Error: 7fd2d816f000-7fd2d8170000 rw-p 0001a000 08:11 20972499
/lib/x86_64-linux-gnu/libz.so.1.2.8
Jan 18 09:19:50 Error: 7fd2d8170000-7fd2d8184000 r-xp 00000000 08:11 20977858
/lib/x86_64-linux-gnu/libresolv-2.19.so
Jan 18 09:19:50 Error: 7fd2d8184000-7fd2d8383000 ---p 00014000 08:11 20977858
/lib/x86_64-linux-gnu/libresolv-2.19.so
Jan 18 09:19:50 Error: 7fd2d8383000-7fd2d8384000 r--p 00013000 08:11 20977858
/lib/x86_64-linux-gnu/libresolv-2.19.so
Jan 18 09:19:50 Error: 7fd2d8384000-7fd2d8385000 rw-p 00014000 08:11 20977858
/lib/x86_64-linux-gnu/libresolv-2.19.so
Jan 18 09:19:50 Error: 7fd2d8385000-7fd2d8387000 rw-p 00000000 00:00 0
Jan 18 09:19:50 Error: 7fd2d8387000-7fd2d83a7000 r-xp 00000000 08:11 20977658
/lib/x86_64-linux-gnu/ld-2.19.so
Jan 18 09:19:50 Error: 7fd2d8588000-7fd2d858a000 rw-p 00000000 00:00 0
Jan 18 09:19:50 Error: 7fd2d858a000-7fd2d859a000 rw-p 00000000 00:00 0
Jan 18 09:19:50 Error: 7fd2d859a000-7fd2d859f000 rw-p 00000000 00:00 0
Jan 18 09:19:50 Error: 7fd2d85a5000-7fd2d85a7000 rw-p 00000000 00:00 0
Jan 18 09:19:50 Error: 7fd2d85a7000-7fd2d85a8000 r--p 00020000 08:11 20977658
/lib/x86_64-linux-gnu/ld-2.19.so
Jan 18 09:19:50 Error: 7fd2d85a8000-7fd2d85a9000 rw-p 00021000 08:11 20977658
/lib/x86_64-linux-gnu/ld-2.19.so
Jan 18 09:19:50 Error: 7fd2d85a9000-7fd2d85aa000 rw-p 00000000 00:00 0
Jan 18 09:19:50 Error: 7fff72ae5000-7fff72afa000 rw-p 00000000 00:00 0 [stack]
Jan 18 09:19:50 Error: 7fff72bfe000-7fff72c00000 r-xp 00000000 00:00 0 [vdso]
Jan 18 09:19:50 Error: ffffffffff600000-ffffffffff601000 r-xp 00000000 00:00 0
[vsyscall]
Jan 18 09:19:50 Error: ===== End GnuPG log =====
Jan 18 09:19:50 Fatal: Duplicity failed.
Jan 18 09:19:50 Fatal: <<<< finished action /etc/backup.d/80.dup: FAILED
Jan 18 09:19:50 Info: FINISHED: 1 actions run. 1 fatal. 81 error. 0 warning.
Jan 18 10:07:01 Info: >>>> starting action /etc/backup.d/80.dup (because 'when =
hourly')
Jan 18 10:12:14 Info: Duplicity cleanup finished successfully.
Jan 18 10:16:15 Info: Duplicity remove-older-than finished successfully.
Jan 18 10:21:57 Error: Local and Remote metadata are synchronized, no sync needed.
Jan 18 10:21:57 Error: Last full backup date: Fri Dec 5 21:16:49 2014
Jan 18 10:21:57 Error: Reuse configured PASSPHRASE as SIGN_PASSPHRASE
Jan 18 10:21:57 Error: GPGError: GPG Failed, see log below:
Jan 18 10:21:58 Error: ===== Begin GnuPG log =====
Jan 18 10:21:58 Error: * buffer overflow detected *: gpg terminated
Jan 18 10:21:58 Error: ======= Backtrace: =========
Jan 18 10:21:58 Error: /lib/x86_64-linux-gnu/libc.so.6(+0x7303f)[0x7f1a2836503f]
Jan 18 10:21:58 Error:
/lib/x86_64-linux-gnu/libc.so.6(fortify_fail+0x37)[0x7f1a283e8147]
Jan 18 10:21:58 Error: /lib/x86_64-linux-gnu/libc.so.6(+0xf4360)[0x7f1a283e6360]
Jan 18 10:21:58 Error: /lib/x86_64-linux-gnu/libc.so.6(+0xf60b7)[0x7f1a283e80b7]
Jan 18 10:21:58 Error: gpg[0x491b68]
Jan 18 10:21:58 Error: gpg[0x48b6fe]
Jan 18 10:21:58 Error: gpg[0x48bb07]
Jan 18 10:21:58 Error: gpg[0x48c5a6]
Jan 18 10:21:58 Error: gpg[0x48c6be]
Jan 18 10:21:58 Error: gpg[0x417209]
Jan 18 10:21:58 Error: gpg[0x44fa43]
Jan 18 10:21:58 Error: gpg[0x4a66fb]
Jan 18 10:21:58 Error: gpg[0x4a6c85]
Jan 18 10:21:58 Error: gpg[0x451c41]
Jan 18 10:21:58 Error: gpg[0x408bd9]
Jan 18 10:21:58 Error:
/lib/x86_64-linux-gnu/libc.so.6(
libc_start_main+0xf5)[0x7f1a28313b45]
Jan 18 10:21:58 Error: gpg[0x40a380]
Jan 18 10:21:58 Error: ======= Memory map: ========
Jan 18 10:21:58 Error: 00400000-004f3000 r-xp 00000000 08:11 22676204 /usr/bin/gpg
Jan 18 10:21:58 Error: 006f2000-006f3000 r--p 000f2000 08:11 22676204 /usr/bin/gpg
Jan 18 10:21:58 Error: 006f3000-006f7000 rw-p 000f3000 08:11 22676204 /usr/bin/gpg
Jan 18 10:21:58 Error: 006f7000-006fa000 rw-p 00000000 00:00 0
Jan 18 10:21:58 Error: 017c5000-017e6000 rw-p 00000000 00:00 0 [heap]
Jan 18 10:21:58 Error: 7f1a27eb2000-7f1a27ec8000 r-xp 00000000 08:11 20978018
/lib/x86_64-linux-gnu/libgcc_s.so.1
Jan 18 10:21:58 Error: 7f1a27ec8000-7f1a280c7000 ---p 00016000 08:11 20978018
/lib/x86_64-linux-gnu/libgcc_s.so.1
Jan 18 10:21:58 Error: 7f1a280c7000-7f1a280c8000 rw-p 00015000 08:11 20978018
/lib/x86_64-linux-gnu/libgcc_s.so.1
Jan 18 10:21:58 Error: 7f1a280c8000-7f1a280ee000 r-xp 00000000 08:11 20972678
/lib/x86_64-linux-gnu/libtinfo.so.5.9
Jan 18 10:21:58 Error: 7f1a280ee000-7f1a282ed000 ---p 00026000 08:11 20972678
/lib/x86_64-linux-gnu/libtinfo.so.5.9
Jan 18 10:21:58 Error: 7f1a282ed000-7f1a282f1000 r--p 00025000 08:11 20972678
/lib/x86_64-linux-gnu/libtinfo.so.5.9
Jan 18 10:21:58 Error: 7f1a282f1000-7f1a282f2000 rw-p 00029000 08:11 20972678
/lib/x86_64-linux-gnu/libtinfo.so.5.9
Jan 18 10:21:58 Error: 7f1a282f2000-7f1a28491000 r-xp 00000000 08:11 20977698
/lib/x86_64-linux-gnu/libc-2.19.so
Jan 18 10:21:58 Error: 7f1a28491000-7f1a28691000 ---p 0019f000 08:11 20977698
/lib/x86_64-linux-gnu/libc-2.19.so
Jan 18 10:21:58 Error: 7f1a28691000-7f1a28695000 r--p 0019f000 08:11 20977698
/lib/x86_64-linux-gnu/libc-2.19.so
Jan 18 10:21:58 Error: 7f1a28695000-7f1a28697000 rw-p 001a3000 08:11 20977698
/lib/x86_64-linux-gnu/libc-2.19.so
Jan 18 10:21:58 Error: 7f1a28697000-7f1a2869b000 rw-p 00000000 00:00 0
Jan 18 10:21:58 Error: 7f1a2869b000-7f1a286a2000 r-xp 00000000 08:11 20978014
/lib/x86_64-linux-gnu/libusb-0.1.so.4.4.4
Jan 18 10:21:58 Error: 7f1a286a2000-7f1a288a1000 ---p 00007000 08:11 20978014
/lib/x86_64-linux-gnu/libusb-0.1.so.4.4.4
Jan 18 10:21:58 Error: 7f1a288a1000-7f1a288a2000 r--p 00006000 08:11 20978014
/lib/x86_64-linux-gnu/libusb-0.1.so.4.4.4
Jan 18 10:21:58 Error: 7f1a288a2000-7f1a288a3000 rw-p 00007000 08:11 20978014
/lib/x86_64-linux-gnu/libusb-0.1.so.4.4.4
Jan 18 10:21:58 Error: 7f1a288a3000-7f1a288a4000 rw-p 00000000 00:00 0
Jan 18 10:21:58 Error: 7f1a288a4000-7f1a288a7000 r-xp 00000000 08:11 20977737
/lib/x86_64-linux-gnu/libdl-2.19.so
Jan 18 10:21:58 Error: 7f1a288a7000-7f1a28aa6000 ---p 00003000 08:11 20977737
/lib/x86_64-linux-gnu/libdl-2.19.so
Jan 18 10:21:58 Error: 7f1a28aa6000-7f1a28aa7000 r--p 00002000 08:11 20977737
/lib/x86_64-linux-gnu/libdl-2.19.so
Jan 18 10:21:58 Error: 7f1a28aa7000-7f1a28aa8000 rw-p 00003000 08:11 20977737
/lib/x86_64-linux-gnu/libdl-2.19.so
Jan 18 10:21:58 Error: 7f1a28aa8000-7f1a28ae8000 r-xp 00000000 08:11 20976805
/lib/x86_64-linux-gnu/libreadline.so.6.3
Jan 18 10:21:58 Error: 7f1a28ae8000-7f1a28ce8000 ---p 00040000 08:11 20976805
/lib/x86_64-linux-gnu/libreadline.so.6.3
Jan 18 10:21:58 Error: 7f1a28ce8000-7f1a28cea000 r--p 00040000 08:11 20976805
/lib/x86_64-linux-gnu/libreadline.so.6.3
Jan 18 10:21:58 Error: 7f1a28cea000-7f1a28cf1000 rw-p 00042000 08:11 20976805
/lib/x86_64-linux-gnu/libreadline.so.6.3
Jan 18 10:21:58 Error: 7f1a28cf1000-7f1a28cf2000 rw-p 00000000 00:00 0
Jan 18 10:21:58 Error: 7f1a28cf2000-7f1a28d01000 r-xp 00000000 08:11 20972676
/lib/x86_64-linux-gnu/libbz2.so.1.0.4
Jan 18 10:21:58 Error: 7f1a28d01000-7f1a28f00000 ---p 0000f000 08:11 20972676
/lib/x86_64-linux-gnu/libbz2.so.1.0.4
Jan 18 10:21:58 Error: 7f1a28f00000-7f1a28f01000 r--p 0000e000 08:11 20972676
/lib/x86_64-linux-gnu/libbz2.so.1.0.4
Jan 18 10:21:58 Error: 7f1a28f01000-7f1a28f02000 rw-p 0000f000 08:11 20972676
/lib/x86_64-linux-gnu/libbz2.so.1.0.4
Jan 18 10:21:58 Error: 7f1a28f02000-7f1a28f1c000 r-xp 00000000 08:11 20972499
/lib/x86_64-linux-gnu/libz.so.1.2.8
Jan 18 10:21:58 Error: 7f1a28f1c000-7f1a2911b000 ---p 0001a000 08:11 20972499
/lib/x86_64-linux-gnu/libz.so.1.2.8
Jan 18 10:21:58 Error: 7f1a2911b000-7f1a2911c000 r--p 00019000 08:11 20972499
/lib/x86_64-linux-gnu/libz.so.1.2.8
Jan 18 10:21:58 Error: 7f1a2911c000-7f1a2911d000 rw-p 0001a000 08:11 20972499
/lib/x86_64-linux-gnu/libz.so.1.2.8
Jan 18 10:21:58 Error: 7f1a2911d000-7f1a29131000 r-xp 00000000 08:11 20977858
/lib/x86_64-linux-gnu/libresolv-2.19.so
Jan 18 10:21:58 Error: 7f1a29131000-7f1a29330000 ---p 00014000 08:11 20977858
/lib/x86_64-linux-gnu/libresolv-2.19.so
Jan 18 10:21:58 Error: 7f1a29330000-7f1a29331000 r--p 00013000 08:11 20977858
/lib/x86_64-linux-gnu/libresolv-2.19.so
Jan 18 10:21:58 Error: 7f1a29331000-7f1a29332000 rw-p 00014000 08:11 20977858
/lib/x86_64-linux-gnu/libresolv-2.19.so
Jan 18 10:21:58 Error: 7f1a29332000-7f1a29334000 rw-p 00000000 00:00 0
Jan 18 10:21:58 Error: 7f1a29334000-7f1a29354000 r-xp 00000000 08:11 20977658
/lib/x86_64-linux-gnu/ld-2.19.so
Jan 18 10:21:58 Error: 7f1a29535000-7f1a29537000 rw-p 00000000 00:00 0
Jan 18 10:21:58 Error: 7f1a29537000-7f1a29547000 rw-p 00000000 00:00 0
Jan 18 10:21:58 Error: 7f1a29547000-7f1a2954c000 rw-p 00000000 00:00 0
Jan 18 10:21:58 Error: 7f1a29552000-7f1a29554000 rw-p 00000000 00:00 0
Jan 18 10:21:58 Error: 7f1a29554000-7f1a29555000 r--p 00020000 08:11 20977658
/lib/x86_64-linux-gnu/ld-2.19.so
Jan 18 10:21:58 Error: 7f1a29555000-7f1a29556000 rw-p 00021000 08:11 20977658
/lib/x86_64-linux-gnu/ld-2.19.so
Jan 18 10:21:58 Error: 7f1a29556000-7f1a29557000 rw-p 00000000 00:00 0
Jan 18 10:21:58 Error: 7fff06d17000-7fff06d2c000 rw-p 00000000 00:00 0 [stack]
Jan 18 10:21:58 Error: 7fff06dfe000-7fff06e00000 r-xp 00000000 00:00 0 [vdso]
Jan 18 10:21:58 Error: ffffffffff600000-ffffffffff601000 r-xp 00000000 00:00 0
[vsyscall]
Jan 18 10:21:58 Error: ===== End GnuPG log =====

This bug was reported earlier in Debian, where there is some analysis of the
potential cause:

https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=771263

This all happens for me on a VPS created with OpenVZ.

Details

External Link
https://bugs.debian.org/771263
Version
1.4.18

Event Timeline

freg set Version to 1.4.18.
freg added a subscriber: freg.

Given that it seems not easy to reproduce this bug can you please test
commit 8adb5ff or the attsched patch to see whether this helps.

If it does not help, can you do a gpg build with debug symbols and run your case
again. If possible attach a debugger for a backtrace or produce it with a dump file.

gniibe set External Link to https://bugs.debian.org/771263.
gniibe added a subscriber: gniibe.

Given that we received no info after nearly two years, shouldn't we simply assume that this bug as been fixed?